AWS Cloud Projets/Project-101-kittens-carousel-static-website-ec2/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2 (ami-026dea5602e368e96) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository, then deployed on Apache Web Server.
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for Secure Connection.
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-02e136e904f3da870
      InstanceType: t2.micro
      KeyName: demokey
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags: 
        - Key: Name
          Value: !Sub Name server of ${AWS::StackName}
      UserData:
        Fn::Base64: | 
        #! /bin/bash
        yum update -y
        yum install httpd -y
        FOLDER="https://raw.githubusercontent.com/arifozlu/My-Repository/master/Python%20/Project-101-kittens-carousel-static-website-ec2/static-web"
        cd /var/www/html
        wget $FOLDER index.html
        wget $FOLDER cat0.jpg
        wget $FOLDER cat1.jpg
        wget $FOLDER cat2.jpg
        wget $FOLDER cat3.png
        systemctl start httpd
        systenctl anable httpd
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
